--- a/movieservice/templates/includes/footer.html
+++ b/movieservice/templates/includes/footer.html
@@ -14,5 +14,6 @@
                 </a>
             </li>
         </ul>
+        <a href="{% url 'homepage:privacy' %}">Политика обработки персональных данных</a>
     </div>
 </footer>
