change link color

--- a/movieservice/templates/includes/footer.html
+++ b/movieservice/templates/includes/footer.html
@@ -14,6 +14,6 @@
                 </a>
             </li>
         </ul>
-        <a href="{% url 'homepage:privacy' %}">Политика обработки персональных данных</a>
+        <a href="{% url 'homepage:privacy' %}" class="fw-lighter text-reset">Политика обработки персональных данных</a>
     </div>
 </footer>
