Fix net::ERR_HTTP2_PROTOCOL_ERROR added meta referer, updated player.js

--- a/movieservice/templates/base.html
+++ b/movieservice/templates/base.html
@@ -3,6 +3,7 @@
 <html lang="ru"  data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
+    <meta name="referrer" content="origin">
     <meta name="author" content="ДГИ" />
     {% block meta %}{% endblock %}
     <title>{% block title %}{% endblock %}</title>
